fix: stop scrolling on mobiles when modal is open

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,7 @@ a {
 }
 
 .no-scroll {
-  position: relative;
   overflow: hidden !important;
+  position: fixed;
+  width: 100%;
 }
